--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/platform-server": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
+    "email-validator": "^1.0.4",
     "nativescript-angular": "0.1.1",
     "nativescript-unit-test-runner": "^0.3.3",
     "tns-core-modules": "^2.0.0"
