--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/platform-server": "2.0.0-rc.1",
@@ -23,7 +24,8 @@
     "email-validator": "^1.0.4",
     "nativescript-angular": "0.1.1",
     "nativescript-unit-test-runner": "^0.3.3",
-    "tns-core-modules": "^2.0.0"
+    "tns-core-modules": "^2.0.0",
+    "typescript": "^1.8.10"
   },
   "devDependencies": {
     "babel-traverse": "6.9.0",
