--- a/package.json
+++ b/package.json
@@ -1,47 +1,42 @@
 {
-  "description": "NativeScript Application",
-  "license": "SEE LICENSE IN <your-license-filename>",
-  "readme": "NativeScript Application",
-  "repository": "<fill-your-repository-here>",
-  "nativescript": {
-    "id": "org.nativescript.montMatchFront",
-    "tns-ios": {
-      "version": "2.0.0"
+    "description": "NativeScript Application",
+    "license": "SEE LICENSE IN <your-license-filename>",
+    "readme": "NativeScript Application",
+    "repository": "<fill-your-repository-here>",
+    "nativescript": {
+        "id": "org.nativescript.montMatchFront",
+        "tns-ios": {
+            "version": "2.0.0"
+        },
+        "tns-android": {
+            "version": "2.0.0"
+        }
     },
-    "tns-android": {
-      "version": "2.0.0"
+    "dependencies": {
+        "@angular/common": "2.0.0-rc.1",
+        "@angular/compiler": "2.0.0-rc.1",
+        "@angular/core": "2.0.0-rc.1",
+        "@angular/http": "2.0.0-rc.1",
+        "@angular/platform-browser": "2.0.0-rc.1",
+        "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+        "@angular/platform-server": "2.0.0-rc.1",
+        "@angular/router-deprecated": "2.0.0-rc.1",
+        "email-validator": "^1.0.4",
+        "nativescript-angular": "0.1.1",
+        "nativescript-unit-test-runner": "^0.3.3",
+        "tns-core-modules": "^2.0.0"
+    },
+    "devDependencies": {
+        "babel-traverse": "6.9.0",
+        "babel-types": "6.9.0",
+        "babylon": "6.8.0",
+        "filewalker": "0.1.2",
+        "jasmine-core": "^2.4.1",
+        "karma": "^0.13.22",
+        "karma-jasmine": "^1.0.2",
+        "karma-nativescript-launcher": "^0.4.0",
+        "lazy": "1.0.11",
+        "nativescript-dev-typescript": "^0.3.2",
+        "typescript": "^1.8.10"
     }
-  },
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/platform-server": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "email-validator": "^1.0.4",
-    "nativescript-angular": "0.1.1",
-    "nativescript-unit-test-runner": "^0.3.3",
-    "tns-core-modules": "^2.0.0",
-    "typescript": "^1.8.10"
-  },
-  "devDependencies": {
-    "babel-traverse": "6.9.0",
-    "babel-types": "6.9.0",
-    "babylon": "6.8.0",
-    "chai": "^3.5.0",
-    "filewalker": "0.1.2",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chai": "^0.1.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha": "^1.0.1",
-    "karma-nativescript-launcher": "^0.4.0",
-    "lazy": "1.0.11",
-    "mocha": "^2.5.3",
-    "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^1.8.10"
-  }
 }
